fixed default vertical alignment in table cells
(assigning it to the table row doesn't work in Opera)

--- a/html/css/vv.css
+++ b/html/css/vv.css
@@ -24,13 +24,10 @@ table {
   border-spacing: none;
 }
 
-table tr {
-  vertical-align: top;
-}
-
 table td, table th {
   text-align: left;
   padding: .1em .3em;
+  vertical-align: top;
 }
 
 table td.nr, table th.nr {
